--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="./assets/architect.jpg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>PNT</b></span> <span class="w3-hide-small w3-text-light-grey">Haus Designs</span></h1>
   </div>
 </header>
 
@@ -101,7 +101,7 @@
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./assets/team2.jpg" alt="John" style="width:100%">
-      <h3>John Doe</h3>
+      <h3>Edward Omi</h3>
       <p class="w3-opacity">CEO &amp; Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
