--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./assets/team2.jpg" alt="John" style="width:100%">
+      <img src="./assets/eddie.jpg" alt="John" style="width:100%">
       <h3>Edward Omi</h3>
       <p class="w3-opacity">CEO &amp; Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
