--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="./assets/house3.jpg" alt="House" style="width:100%">
+        <img src="./assets/design2.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
