--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="./assets/house4.jpg" alt="House" style="width:99%">
+        <img src="./assets/design3.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
