--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="./assets/house5.jpg" alt="House" style="width:100%">
+        <img src="./assets/design4.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -72,7 +72,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="./assets/house5.jpg" alt="House" style="width:99%">
+        <img src="./assets/design4.jpg" alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -84,7 +84,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="./assets/house3.jpg" alt="House" style="width:99%">
+        <img src="./assets/design4.jpg" alt="House" style="width:99%">
       </div>
     </div>
   </div>
