--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>PNT Haus Designs is a Papua New Guinea based company specializing in architetural house designs. Our Designs are done on skethup and we have a range of different designs that customers can choose from. Clients can contact us regarding their design concept and we can develop their 3D design of their required house and provide standard blueprints and material costing.  
+    <p>PNT Haus Designs is a Papua New Guinea based company specializing in architetural house designs. Our Designs are done on sketchUp and we have a range of different designs that customers can choose from. Clients can contact us regarding their design concept and we can develop their 3D design of their required house and provide standard blueprints and material costing.  
     </p>
   </div>
 
@@ -101,7 +101,7 @@
       <img src="./assets/eddie.jpg" alt="John" style="width:100%">
       <h3>Edward Omi</h3>
       <p class="w3-opacity">CEO &amp; Founder</p>
-      <p>Edward Omi has over 8 years experience in the IT industry with a wealth of experience in Sketchup design. He holds a Degree in Computer Science with a Post 
+      <p>Edward Omi has over 8 years experience in the IT industry with a wealth of experience in SketchUp design. He holds a Degree in Computer Science with a Post 
       graduate- Diploma in Informatics. 
       </p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
